--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,11 +12,11 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
-
     steps:
     - uses: actions/checkout@v3
+    - name: Set up Xcode
+      run: sudo xcode-select -s /Applications/Xcode_12.4.app/Contents/Developer
     - name: Build
-      run: swift build -v
+      run: xcodebuild build -project YourProject.xcodeproj -scheme YourScheme -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11,OS=latest'
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild test -project YourProject.xcodeproj -scheme YourScheme -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11,OS=latest'
